--- a/minmax.html
+++ b/minmax.html
@@ -9,13 +9,23 @@
     <script>
         'use strict'
         
-    function minmax () {
-        let args = [];
-            for (var i = 0; i < arguments.length; i++) {
-            args[i] = arguments[i];
+        let arr = [2,3,4,5,6,999];
+        
+        function minmax () {
+
+            let min = arr[0];
+            let max = arr[0];
+
+            for (let i = 1; i < arr.length; i++) {
+                if (arr[i] < min) {
+                    min = arr[i];
+                }
+                if (arr[i] > max) {
+                    max = arr[i];
+                }
+            }
+            return [min, max];
         }
-        console.log(args.shift(), args.pop());
-    }
 
 
         </script>
